@@ -1,0 +1,57 @@
+# CMSGEM 
+####################################################################################################################
+#   ReadoutType  DetType    DetName    Sector     SectPos   SectSize   nbConnect  orient
+####################################################################################################################
+DET,   CMSGEM,    CMSGEM,    CMS,    CMSSECTOR1,    139,         401,       3,       1
+DET,   CMSGEM,    CMSGEM,    CMS,    CMSSECTOR2,    236,         384,       3,       1
+DET,   CMSGEM,    CMSGEM,    CMS,    CMSSECTOR3,    409,         355,       3,       1
+DET,   CMSGEM,    CMSGEM,    CMS,    CMSSECTOR4,    571,         326,       3,       1
+DET,   CMSGEM,    CMSGEM,    CMS,    CMSSECTOR5,    733,         326,       3,       1
+DET,   CMSGEM,    CMSGEM,    CMS,    CMSSECTOR6,    867,         275,       3,       1
+DET,   CMSGEM,    CMSGEM,    CMS,    CMSSECTOR7,    1056,        242,       3,       1
+DET,   CMSGEM,    CMSGEM,    CMS,    CMSSECTOR8,    1169,        223,       3,       1
+
+###################################################################################################################
+#     FEC Name    APV Name    FECId    ADCchNo   apvIndex     APV Hdr       Sigma Cut
+###################################################################################################################
+#
+############################################################################################
+#APV     fecId    adcCh     detPlane  apvOrient  apvIndex    apvHdr   
+############################################################################################ 
+#
+#
+APV,        1,        0,       CMSSECTOR8,     0,      0,        1300
+APV,        1,        1,       CMSSECTOR8,     0,       2,        1300
+
+APV,        1,        2,       CMSSECTOR8,     0,       1,        1300
+APV,        1,        3,       CMSSECTOR7,     0,       1,        1300
+
+APV,        1,        4,       CMSSECTOR6,     1,       2,        1300
+APV,        1,        5,       CMSSECTOR5,     1,       2,        1300
+
+APV,        1,        8,       CMSSECTOR6,     0,       0,        1300
+APV,        1,        9,       CMSSECTOR6,     0,       1,        1300
+
+APV,        1,        10,      CMSSECTOR7,     0,       0,        1300
+APV,        1,        11,      CMSSECTOR7,     0,       2,        1300
+
+APV,        1,        12,      CMSSECTOR5,     0,       0,        1300
+APV,        1,        13,      CMSSECTOR5,     0,       1,        1300
+
+APV,        2,        0,      CMSSECTOR3,     0,       2,        1300
+APV,        2,        1,      CMSSECTOR4,     0,       2,        1300
+
+APV,        2,        2,      CMSSECTOR1,     0,       2,        1300
+APV,        2,        3,      CMSSECTOR2,     0,       2,        1300
+
+APV,        2,        4,      CMSSECTOR3,     0,       0,        1300
+APV,        2,        5,      CMSSECTOR3,     0,       1,        1300
+
+APV,        2,        6,      CMSSECTOR2,     0,       0,        1300
+APV,        2,        7,      CMSSECTOR2,     0,       1,        1300
+
+APV,        2,        8,      CMSSECTOR1,     0,       0,        1300
+APV,        2,        9,      CMSSECTOR1,     0,       1,        1300
+
+APV,        2,        10,      CMSSECTOR4,     0,      0,        1300
+APV,        2,        11,      CMSSECTOR4,     0,      1,        1300
