@@ -1,0 +1,16 @@
+############################################################################################################
+#      Readout       DetType   DetName   PlaneX     SizeX  nbConnectors Orient   PlaneY    SizeY  nbConnectors Orient 
+#############################################################################################################
+DET,   CARTESIAN,   STANDARD,   GEM0,    GEM0X,     102.4,      2,      1,     GEM0Y,    102.4,     2,    1
+#
+#########################################################################################################
+#     FEC Name    APV Name    FECId    ADCchNo   apvIndex     APV Hdr       Sigma Cut
+########################################################################################################
+#
+############################################################################################
+#APV     fecId    adcCh     detPlane  apvOrient  apvIndex    apvHdr   
+############################################################################################ 
+APV,        1,       1,        GEM0X,     0,        0,        1300
+APV,        1,       0,        GEM0X,     0,        1,        1300
+APV,        1,       3,        GEM0Y,     0,        0,        1300
+APV,        1,       2,        GEM0Y,     0,        1,        1300
