@@ -3,11 +3,15 @@
 *                                                *
 *	CHANGELOG: CMS_GEM_Analysis_Framework        *
 *	VERSION: 2.0.0                               *
-*	LAST UPDATE: Aug 18 2016                     *
+*	LAST UPDATE: Aug 19 2016                     *
 *                                                *
 **************************************************
 
-Update: August 8th 2016
+Update: August 19th 2016
+==================================================
+->Fixed an error in VisualizeUniformity where iphi was drawn in the wrong order on the summary canvases
+
+Update: August 18th 2016
 ==================================================
 ->Changed the mapping files, config/Mapping_GE11-VII-S.cfg and config/Mapping_GE11-VII-L.cfg, to have the width & height matching the CMS Geometry
 ->Note the CMS Geometry for GE1/1 is found in table 2 of https://twiki.cern.ch/twiki/bin/viewauth/CMS/GEMGeometryStatusNew#GE_1_1_Global_Position
